--- a/index.html
+++ b/index.html
@@ -3,17 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Budget Tracker - Home</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Budget Tracker</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to the Budget Tracker</h1>
-        <p>Track your income and savings efficiently!</p>
-        <div class="links">
-            <a href="login.html">Login</a>
-            <a href="signup.html">Signup</a>
+        <h1>Budget Tracker</h1>
+        <div id="login-form">
+            <h2>Login</h2>
+            <form id="loginForm">
+                <input type="text" id="username" placeholder="Username" required>
+                <input type="password" id="password" placeholder="Password" required>
+                <button type="submit">Login</button>
+            </form>
+            <p>Don't have an account? <a href="#" id="showSignup">Sign Up</a></p>
+        </div>
+        <div id="signup-form" style="display: none;">
+            <h2>Sign Up</h2>
+            <form id="signupForm">
+                <input type="text" id="newUsername" placeholder="Username" required>
+                <input type="password" id="newPassword" placeholder="Password" required>
+                <button type="submit">Sign Up</button>
+            </form>
+            <p>Already have an account? <a href="#" id="showLogin">Login</a></p>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
